--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nica Galas Photography</title>
+    <meta
+      name="description"
+      content="Professional Photographer, available for special events"
+    />
+    <meta name="robots" content="index,follow" />
+    <link rel="icon" href="./icons/airplane.svg" />
+
+    <title>Nica Galas | Photographer</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body></body>
