added header markup

--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
     <title>Nica Galas | Photographer</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <nav>
+        <h1 id="logo">Mica Galas</h1>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
