--- a/index.html
+++ b/index.html
@@ -24,5 +24,24 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <div class="hero-introduction">
+          <h2>
+            Mica Galas <br />
+            Photography
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga necessitatibus
+            commodi officiis asperiores veritatis odit temporibus officia assumenda quo
+            quisquam.
+          </p>
+          <a href="#gallery">Gallery</a>
+        </div>
+        <div class="hero-images">
+          <img class="hero-mica" src="./img/mica-galas.png" alt="picture of mica galas" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
