added plants to the hero section

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
             Photography
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga necessitatibus
-            commodi officiis asperiores veritatis odit temporibus officia assumenda quo
-            quisquam.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati delectus
+            minus officia ut impedit suscipit reprehenderit atque hic mollitia a.
           </p>
           <a href="#gallery">Gallery</a>
         </div>
         <div class="hero-images">
           <img class="hero-mica" src="./img/mica-galas.png" alt="picture of mica galas" />
+          <img src="./img/plant1.png" alt="" class="plant1 plant" />
+          <img src="./img/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
     </main>
