--- a/index.html
+++ b/index.html
@@ -48,6 +48,36 @@
           <img src="./img/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
+      <section class="about">
+        <div class="about-image">
+          <h5>MINIMAL</h5>
+          <img src="./img/about-image.png" alt="portrait-picture" />
+        </div>
+        <div class="about-text">
+          <h2>Mica Galas</h2>
+          <div class="about-life">
+            <h3>My Life</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In iusto ipsa hic
+              tenetur voluptate quo odio asperiores sapiente id magnam.
+            </p>
+          </div>
+          <div class="about-work">
+            <h3>My Work</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In iusto ipsa hic
+              tenetur voluptate quo odio asperiores sapiente id magnam.
+            </p>
+          </div>
+          <div class="about-contact">
+            <h3>Get In Touch</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In iusto ipsa hic
+              tenetur voluptate quo odio asperiores sapiente id magnam.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
