--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
         </div>
       </section>
       <div class="gallery">
-        <img class="gallery1" src="./img/gallery-1.jpg" alt="main in suit" />
+        <header class="gallery-head">
+          <h2>Quality Photography</h2>
+          <p>My work pictures that I took</p>
+        </header>
+        <img class="gallery1" src="./img/gallery-1.jpg" alt="man in suit" />
         <img class="gallery2" src="./img/gallery-2.jpg" alt="lady in coat" />
         <img class="gallery3" src="./img/gallery-3.jpg" alt="lady in t-shirt" />
         <img class="gallery4" src="./img/gallery-4.jpg" alt="lady in jacket" />
