--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
         <img class="gallery3" src="./img/gallery-3.jpg" alt="lady in t-shirt" />
         <img class="gallery4" src="./img/gallery-4.jpg" alt="lady in jacket" />
       </div>
+      <section class="contact">
+        <div class="form-wrapper">
+          <h2>
+            Get in <br />
+            <span> touch.</span>
+          </h2>
+          <form>
+            <label for="email">Your Email:</label>
+            <input type="email" id="email required" />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <img src="./img/contact-image.jpg" alt="nica-galas" />
+      </section>
     </main>
   </body>
 </html>
