added footer section markup

--- a/index.html
+++ b/index.html
@@ -103,5 +103,25 @@
         <img src="./img/contact-image.jpg" alt="nica-galas" />
       </section>
     </main>
+    <footer>
+      <h4>Nica Galas &copy; 2019</h4>
+      <ul>
+        <li>
+          <a href="#"
+            ><img src="./img/youtube-symbol 1.svg" alt="youtube-social-media"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/twitter-symbol 1.svg" alt="twitter-social-media"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/instagram-symbol 1.svg" alt="instagram-social-media"
+          /></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
