--- a/index.html
+++ b/index.html
@@ -112,14 +112,10 @@
           /></a>
         </li>
         <li>
-          <a href="#"
-            ><img src="./img/twitter-symbol 1.svg" alt="twitter-social-media"
-          /></a>
+          <a href="#"><img src="./img/twitter 1.svg" alt="twitter-social-media" /></a>
         </li>
         <li>
-          <a href="#"
-            ><img src="./img/instagram-symbol 1.svg" alt="instagram-social-media"
-          /></a>
+          <a href="#"><img src="./img/instagram 1.svg" alt="instagram-social-media" /></a>
         </li>
       </ul>
     </footer>
