added burger menu display through javascript

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="burger">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class="line1"></span>
+          <span class="line2"></span>
+          <span class="line3"></span>
         </div>
       </nav>
     </header>
@@ -48,7 +48,7 @@
           <img src="./img/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
-      <section class="about">
+      <section class="about" id="about">
         <div class="about-image">
           <h5>MINIMAL</h5>
           <img src="./img/about-image.png" alt="portrait-picture" />
@@ -62,7 +62,7 @@
               tenetur voluptate quo odio asperiores sapiente id magnam.
             </p>
           </div>
-          <div class="about-work">
+          <div class="about-work" id="work">
             <h3>My Work</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. In iusto ipsa hic
@@ -88,7 +88,7 @@
         <img class="gallery3" src="./img/gallery-3.jpg" alt="lady in t-shirt" />
         <img class="gallery4" src="./img/gallery-4.jpg" alt="lady in jacket" />
       </div>
-      <section class="contact">
+      <section class="contact" id="contact">
         <div class="form-wrapper">
           <h2>
             Get in <br />
@@ -119,5 +119,7 @@
         </li>
       </ul>
     </footer>
+
+    <script src="./app.js"></script>
   </body>
 </html>
