--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 id="logo">Mica Galas</h1>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#work">Work</a></li>
+          <li><a href="#gallery">Work</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="burger">
@@ -78,7 +78,7 @@
           </div>
         </div>
       </section>
-      <div class="gallery">
+      <div class="gallery" id="gallery">
         <header class="gallery-head">
           <h2>Quality Photography</h2>
           <p>My work pictures that I took</p>
